--- a/src/pages/SentryNodes.scss
+++ b/src/pages/SentryNodes.scss
@@ -28,7 +28,7 @@
   font-weight: $font-weight-semi-bold;
   line-height: 1.3;
   color: $color-neutral-white;
-  text-align: center;
+  text-align: left; // Left-aligned to match content below
   margin: 0 0 60px 0;
   white-space: nowrap;
 
